--- a/lab1/PT_Part1_Intro.ipynb
+++ b/lab1/PT_Part1_Intro.ipynb
@@ -3,6 +3,16 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/positopose/introtodeeplearning/blob/master/lab1/PT_Part1_Intro.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "WBk0ZDWY-ff8"
       },
       "source": [
@@ -118,11 +128,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 10,
       "metadata": {
-        "id": "oaHXABe8oPcO"
+        "id": "oaHXABe8oPcO",
+        "outputId": "e1a3f6a4-041a-43db-bf8f-308e9014e415",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "`fibonacci` is a 1-d Tensor with shape: torch.Size([6])\n",
+            "`count_to_100` is a 1-d Tensor with shape: torch.Size([100])\n"
+          ]
+        }
+      ],
       "source": [
         "fibonacci = torch.tensor([1, 1, 2, 3, 5, 8])\n",
         "count_to_100 = torch.tensor(range(100))\n",
@@ -142,24 +165,39 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 11,
       "metadata": {
-        "id": "tFeBBe1IouS3"
+        "id": "tFeBBe1IouS3",
+        "outputId": "55a3c34f-71c0-48db-f0ca-cd37d59c37fc",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "matrix is a tensor of dim: 2 with shape: torch.Size([2, 2]) and value: tensor([[1, 2],\n",
+            "        [3, 4]])\n",
+            "images is a 4-d Tensor with shape: torch.Size([10, 3, 256, 256])\n"
+          ]
+        }
+      ],
       "source": [
         "### Defining higher-order Tensors ###\n",
         "\n",
         "'''TODO: Define a 2-d Tensor'''\n",
-        "matrix = # TODO\n",
+        "matrix = torch.tensor([[1,2],[3,4]])\n",
         "\n",
         "assert isinstance(matrix, torch.Tensor), \"matrix must be a torch Tensor object\"\n",
         "assert matrix.ndim == 2\n",
+        "print(f\"matrix is a tensor of dim: {matrix.ndim} with shape: {matrix.shape} and value: {matrix}\")\n",
         "\n",
         "'''TODO: Define a 4-d Tensor.'''\n",
         "# Use torch.zeros to initialize a 4-d Tensor of zeros with size 10 x 3 x 256 x 256.\n",
         "#   You can think of this as 10 images where each image is RGB 256 x 256.\n",
-        "images = # TODO\n",
+        "images = torch.zeros((10,3,256,256))\n",
         "\n",
         "assert isinstance(images, torch.Tensor), \"images must be a torch Tensor object\"\n",
         "assert images.ndim == 4, \"images must have 4 dimensions\"\n",
@@ -178,11 +216,25 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 12,
       "metadata": {
-        "id": "FhaufyObuLEG"
+        "id": "FhaufyObuLEG",
+        "outputId": "bef81ee4-6168-4649-abe3-e3b5d749c932",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "`row_vector`: tensor([3, 4])\n",
+            "`column_vector`: tensor([2, 4])\n",
+            "`scalar`: 2\n"
+          ]
+        }
+      ],
       "source": [
         "row_vector = matrix[1]\n",
         "column_vector = matrix[:, 1]\n",
@@ -208,11 +260,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 13,
       "metadata": {
-        "id": "X_YJrZsxYZ2z"
+        "id": "X_YJrZsxYZ2z",
+        "outputId": "cb23e0c3-26f7-4018-9b75-17a8a21257b5",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "c1: 76\n",
+            "c2: 76\n"
+          ]
+        }
+      ],
       "source": [
         "# Create the nodes in the graph and initialize values\n",
         "a = torch.tensor(15)\n",
@@ -244,7 +309,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 14,
       "metadata": {
         "id": "PJnfzpWyYZ23",
         "scrolled": true
@@ -255,10 +320,9 @@
         "\n",
         "# Construct a simple computation function\n",
         "def func(a, b):\n",
-        "    '''TODO: Define the operation for c, d, e.'''\n",
-        "    c = # TODO\n",
-        "    d = # TODO\n",
-        "    e = # TODO\n",
+        "    c = a+b\n",
+        "    d = b-1\n",
+        "    e = c*d\n",
         "    return e\n"
       ]
     },
@@ -671,7 +735,8 @@
         "WBk0ZDWY-ff8"
       ],
       "name": "PT_Part1_Intro.ipynb",
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "display_name": "Python 3",
