--- a/lab1/PT_Part1_Intro.ipynb
+++ b/lab1/PT_Part1_Intro.ipynb
@@ -3,16 +3,6 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/positopose/introtodeeplearning/blob/master/lab1/PT_Part1_Intro.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "WBk0ZDWY-ff8"
       },
       "source": [
@@ -104,11 +94,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 20,
       "metadata": {
-        "id": "tFxztZQInlAB"
+        "id": "tFxztZQInlAB",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "58eaa915-3563-47ed-c1b9-d8366858f1f0"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "`integer` is a 0-d Tensor: 1234\n",
+            "`decimal` is a 0-d Tensor: 3.1415927410125732\n"
+          ]
+        }
+      ],
       "source": [
         "integer = torch.tensor(1234)\n",
         "decimal = torch.tensor(3.14159265359)\n",
@@ -131,10 +134,10 @@
       "execution_count": 10,
       "metadata": {
         "id": "oaHXABe8oPcO",
-        "outputId": "e1a3f6a4-041a-43db-bf8f-308e9014e415",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "e1a3f6a4-041a-43db-bf8f-308e9014e415"
       },
       "outputs": [
         {
@@ -168,10 +171,10 @@
       "execution_count": 11,
       "metadata": {
         "id": "tFeBBe1IouS3",
-        "outputId": "55a3c34f-71c0-48db-f0ca-cd37d59c37fc",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "55a3c34f-71c0-48db-f0ca-cd37d59c37fc"
       },
       "outputs": [
         {
@@ -219,10 +222,10 @@
       "execution_count": 12,
       "metadata": {
         "id": "FhaufyObuLEG",
-        "outputId": "bef81ee4-6168-4649-abe3-e3b5d749c932",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "bef81ee4-6168-4649-abe3-e3b5d749c932"
       },
       "outputs": [
         {
@@ -263,10 +266,10 @@
       "execution_count": 13,
       "metadata": {
         "id": "X_YJrZsxYZ2z",
-        "outputId": "cb23e0c3-26f7-4018-9b75-17a8a21257b5",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "cb23e0c3-26f7-4018-9b75-17a8a21257b5"
       },
       "outputs": [
         {
@@ -337,11 +340,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 23,
       "metadata": {
-        "id": "pnwsf8w2uF7p"
+        "id": "pnwsf8w2uF7p",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "7cc7f603-60e1-450f-e13c-70d565d4a822"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "e_out: 6.0\n"
+          ]
+        }
+      ],
       "source": [
         "# Consider example values for a,b\n",
         "a, b = 1.5, 2.5\n",
@@ -379,7 +394,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 24,
       "metadata": {
         "id": "HutbJk-1kHPh"
       },
@@ -401,10 +416,10 @@
         "\n",
         "    def forward(self, x):\n",
         "        '''TODO: define the operation for z (hint: use torch.matmul).'''\n",
-        "        z = # TODO\n",
+        "        z = torch.matmul(x,self.W) + self.bias\n",
         "\n",
         "        '''TODO: define the operation for out (hint: use torch.sigmoid).'''\n",
-        "        y = # TODO\n",
+        "        y = torch.sigmoid(z)\n",
         "        return y\n"
       ]
     },
@@ -419,11 +434,25 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 25,
       "metadata": {
-        "id": "2yxjCPa69hV_"
+        "id": "2yxjCPa69hV_",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "f0e2668b-eef2-4a1f-f302-ad9acf47ec4d"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "input shape: torch.Size([1, 2])\n",
+            "output shape: torch.Size([1, 3])\n",
+            "output result: tensor([[0.0049, 0.9850, 0.3020]], grad_fn=<SigmoidBackward0>)\n"
+          ]
+        }
+      ],
       "source": [
         "# Define a layer and test the output!\n",
         "num_inputs = 2\n",
@@ -450,7 +479,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 26,
       "metadata": {
         "id": "7WXTpmoL6TDz"
       },
@@ -465,7 +494,7 @@
         "# Define the model\n",
         "'''TODO: Use the Sequential API to define a neural network with a\n",
         "    single linear (dense!) layer, followed by non-linearity to compute z'''\n",
-        "model = nn.Sequential( ''' TODO ''' )\n"
+        "model = nn.Sequential(nn.Linear(n_input_nodes, n_output_nodes), nn.Sigmoid())\n"
       ]
     },
     {
@@ -479,11 +508,25 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 27,
       "metadata": {
-        "id": "zKhp6XqCFFa0"
+        "id": "zKhp6XqCFFa0",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "208ad6be-a17a-4dbf-e70e-bc8018365482"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "input shape: torch.Size([1, 2])\n",
+            "output shape: torch.Size([1, 3])\n",
+            "output result: tensor([[0.0049, 0.9850, 0.3020]], grad_fn=<SigmoidBackward0>)\n"
+          ]
+        }
+      ],
       "source": [
         "# Test the model with example input\n",
         "x_input = torch.tensor([[1, 2.]])\n",
@@ -735,8 +778,7 @@
         "WBk0ZDWY-ff8"
       ],
       "name": "PT_Part1_Intro.ipynb",
-      "provenance": [],
-      "include_colab_link": true
+      "provenance": []
     },
     "kernelspec": {
       "display_name": "Python 3",
