--- a/lab1/PT_Part2_Music_Generation.ipynb
+++ b/lab1/PT_Part2_Music_Generation.ipynb
@@ -10,7 +10,7 @@
         "  <td align=\"center\"><a target=\"_blank\" href=\"http://introtodeeplearning.com\">\n",
         "        <img src=\"https://i.ibb.co/Jr88sn2/mit.png\" style=\"padding-bottom:5px;\" />\n",
         "      Visit MIT Deep Learning</a></td>\n",
-        "  <td align=\"center\"><a target=\"_blank\" href=\"https://colab.research.google.com/github/positopose/introtodeeplearning/blob/master/lab1/PT_Part2_Music_Generation.ipynb\">\n",
+        "  <td align=\"center\"><a target=\"_blank\" href=\"https://colab.research.google.com/github/MITDeepLearning/introtodeeplearning/blob/master/lab1/PT_Part2_Music_Generation.ipynb\">\n",
         "        <img src=\"https://i.ibb.co/2P3SLwK/colab.png\"  style=\"padding-bottom:5px;\" />Run in Google Colab</a></td>\n",
         "  <td align=\"center\"><a target=\"_blank\" href=\"https://github.com/MITDeepLearning/introtodeeplearning/blob/master/lab1/PT_Part2_Music_Generation.ipynb\">\n",
         "        <img src=\"https://i.ibb.co/xfJbPmL/github.png\"  height=\"70px\" style=\"padding-bottom:5px;\"  />View Source on GitHub</a></td>\n",
@@ -75,7 +75,7 @@
         "!pip install comet_ml > /dev/null 2>&1\n",
         "import comet_ml\n",
         "# TODO: ENTER YOUR API KEY HERE!! instructions above\n",
-        "COMET_API_KEY = \"\"\n",
+        "COMET_API_KEY = \"geyc5ePtkKF6eqP9CC0XzOoPK\"\n",
         "\n",
         "# Import PyTorch and other relevant libraries\n",
         "import torch\n",
